--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "fideloper/proxy": "^4.4",
         "firebase/php-jwt": "^6.3",
         "fruitcake/laravel-cors": "^2.0",
+        "geoip2/geoip2": "^3.3",
         "google/recaptcha": "^1.2",
         "guzzlehttp/guzzle": "^7.4.3",
+        "joanhey/adapterman": "^0.7.1",
         "laravel/framework": "^8.0",
         "laravel/horizon": "^5.9.6",
         "laravel/tinker": "^2.5",
